--- a/index.html
+++ b/index.html
@@ -9,185 +9,6 @@
 <link rel="icon" href="./dist/image/favicon.io/favicon.ico" />
 
 <title>Portofolio</title>
-
-<style>
-.about-cta{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  gap:.55rem;
-
-  padding:.8rem 1.4rem;
-  border-radius:999px;
-
-  font-size:.85rem;
-  font-weight:500;
-
-  background:rgba(255,255,255,.05);
-  border:1px solid rgba(255,255,255,.12);
-  color:#a3d5e0;
-
-  transition:
-    transform .25s ease,
-    background .25s ease,
-    border .25s ease,
-    box-shadow .25s ease;
-}
-
-.about-cta:hover{
-  background:rgba(255,255,255,.1);
-  border:1px solid rgba(255,255,255,.22);
-  transform:translateY(-2px);
-  box-shadow:0 10px 30px rgba(0,0,0,.35);
-}
-
-.about-cta .arrow{
-  transition:transform .25s ease;
-}
-
-.about-cta:hover .arrow{
-  transform:translateX(4px);
-}
-
-/* MOBILE */
-@media(max-width:640px){
-  .about-cta{
-    width:100%;
-    justify-content:center;
-    padding:.9rem 1.2rem;
-    font-size:.85rem;
-  }
-}
-
-/* TABLET */
-@media(min-width:641px){
-  .about-cta{
-    width:auto;
-  }
-}
-
-/* DESKTOP */
-@media(min-width:1024px){
-  .about-cta{
-    font-size:.9rem;
-    padding:.85rem 1.5rem;
-  }
-}
-/* ================= PREMIUM REVEAL ================= */
-.reveal{
-  opacity:0;
-  transform:translateY(35px);
-  will-change: transform, opacity;
-  transition:
-    opacity .9s cubic-bezier(.22,.61,.36,1),
-    transform .9s cubic-bezier(.22,.61,.36,1);
-}
-.reveal.show{
-  opacity:1;
-  transform:translateY(0);
-}
-
-.reveal-child{
-  opacity:0;
-  transform:translateY(20px);
-  transition:
-    opacity .8s cubic-bezier(.22,.61,.36,1),
-    transform .8s cubic-bezier(.22,.61,.36,1);
-}
-
-.reveal-child.show{
-  opacity:1;
-  transform:translateY(0);
-}
-
-/* stagger */
-.reveal.delay-1{ transition-delay:.15s }
-.reveal.delay-2{ transition-delay:.3s }
-.reveal.delay-3{ transition-delay:.45s }
-
-/* ================= HERO FLOAT ================= */
-.hero-float{
-  animation: float 6s ease-in-out infinite;
-}
-@media(max-width:768px){
-  .hero-float{ animation:none; }
-}
-@keyframes float{
-  0%{transform:translateY(0)}
-  50%{transform:translateY(-10px)}
-  100%{transform:translateY(0)}
-}
-
-/* ================= CARD PREMIUM ================= */
-.portfolio-card{
-  opacity:0;
-  transform:translateY(40px);
-  will-change: transform, opacity;
-}
-
-.portfolio-card.show{
-  opacity:1;
-  transform:translateY(0);
-  transition:
-    opacity .9s cubic-bezier(.22,.61,.36,1),
-    transform .9s cubic-bezier(.22,.61,.36,1);
-}
-.portfolio-card:hover{
-  transform:translateY(-8px);
-  box-shadow:0 20px 60px rgba(0,0,0,.45);
-}
-
-.portfolio-card img{
-  transition: transform .6s cubic-bezier(.22,.61,.36,1);
-}
-
-.portfolio-card:hover img{
-  transform: scale(1.06);
-}
-
-.portfolio-overlay{
-  opacity:.85;
-  transition:opacity .5s ease;
-}
-
-.portfolio-card:hover .portfolio-overlay{
-  opacity:.55;
-}
-/* tech badge */
-.tech-badge{
-  font-size:.65rem;
-  padding:.25rem .45rem;
-  border-radius:.35rem;
-  background:rgba(255,255,255,.06);
-  border:1px solid rgba(255,255,255,.1);
-  transition:
-    transform .25s ease,
-    background .25s ease,
-    border .25s ease;
-}
-
-.portfolio-card:hover .tech-badge{
-  background:rgba(255,255,255,.1);
-  border:1px solid rgba(255,255,255,.18);
-  transform:translateY(-1px);
-}
-
-/* ================= NAVBAR SCROLL ================= */
-.nav-solid{
-  background:#05070d;
-  backdrop-filter:blur(12px);
-}
-
-/* ================= BUTTON ================= */
-.btn-soft{
-  transition: transform .3s ease, box-shadow .3s ease;
-}
-.btn-soft:hover{
-  transform:translateY(-2px);
-  box-shadow:0 10px 25px rgba(0,0,0,.25);
-}
-
-</style>
 </head>
 
 <body class="overflow-x-hidden bg-[#05070d] text-slate-200">
@@ -205,8 +26,8 @@
 
         <nav class="hidden lg:flex gap-10 text-sm lg:text-base">
           <a href="#home" class="hover:text-primary transition">Beranda</a>
-          <a href="#about" class="hover:text-primary transition">Tentang</a>
-          <a href="#portofolio" class="hover:text-primary transition">Projects</a>
+          <a href="./tentang-saya.html" class="hover:text-primary transition">Profil</a>
+          <a href="./projects.html" class="hover:text-primary transition">Projects</a>
         </nav>
 
         <button id="burgerBtn" class="lg:hidden relative w-8 h-8 flex items-center justify-center">
@@ -397,6 +218,19 @@
             </a>
           </div>
         </div>
+      </div>
+      <!-- CTA ALL PROJECTS -->
+      <div class="projects-cta reveal">
+        <a href="./projects.html" class="projects-btn">
+          <span>Lihat Semua Project</span>
+          <svg class="projects-arrow" width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <path d="M5 12H19M19 12L13 6M19 12L13 18"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </a>
       </div>
     </div>
   </section>
